manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  namespace: devops
  name: ossupload-service
  labels:
    app: ossupload
spec:
  selector:
    app: ossupload
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
