manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ossupload-ingress
  namespace: devops
  labels:
    ingress-controller: nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"  # 启用 CORS
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, OPTIONS"
    nginx.ingress.kubernetes.io/x-frame-options: "DENY"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # 暂时禁用 SSL 重定向
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"  # 修改为 100m
spec:
  ingressClassName: nginx
  # 因为没有证书，暂时注释
  tls:
  - hosts:
    - devops.dichandadang.com
    secretName: tls-secret
  rules:
    - host: devops.dichandadang.com
      http:
        paths:
          - path: /ossupload
            pathType: Prefix
            backend:
              service:
                name: ossupload-service
                port:
                  number: 80
                  
#    - host: devops.ruijiandata.com
#      http:
#        paths:
#          - path: /ossupload
#            pathType: Prefix
#            backend:
#              service:
#                name: ossupload-service
#                port:
#                  number: 80
